add - Added scaffolding for MarkScreen
---

This screensaver shows you information about students and their grades,
similar to an old university grade book.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
@@ -9698,5 +9698,17 @@
                 "Description": "NKS_SCREENSAVERPACKS_NOISY_SETTINGS_COLOR_DESC"
             }
         ]
+    },
+    {
+        "Name": "MarkScreen",
+        "Desc": "NKS_SCREENSAVERPACKS_MARKSCREEN_SETTINGS_DESC",
+        "Keys": [
+            {
+                "Name": "NKS_SCREENSAVERPACKS_COMMON_SETTINGS_DELAY_NAME",
+                "Type": "SInt",
+                "Variable": "MarkScreenDelay",
+                "Description": "NKS_SCREENSAVERPACKS_COMMON_SETTINGS_DELAY_DESC"
+            }
+        ]
     }
 ]
