add - Added the MarkScreen screensaver!
---

MarkScreen is now included in the final version of 0.2.0!

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
@@ -9708,6 +9708,22 @@
                 "Type": "SInt",
                 "Variable": "MarkScreenDelay",
                 "Description": "NKS_SCREENSAVERPACKS_COMMON_SETTINGS_DELAY_DESC"
+            },
+            {
+                "Name": "NKS_SCREENSAVERPACKS_MARKSCREEN_SETTINGS_MINGRADE_NAME",
+                "Type": "SIntSlider",
+                "Variable": "MarkScreenMinimumGrade",
+                "Description": "NKS_SCREENSAVERPACKS_MARKSCREEN_SETTINGS_MINGRADE_DESC",
+                "MinimumValue": 0,
+                "MaximumValue": 10000
+            },
+            {
+                "Name": "NKS_SCREENSAVERPACKS_MARKSCREEN_SETTINGS_MAXGRADE_NAME",
+                "Type": "SIntSlider",
+                "Variable": "MarkScreenMaximumGrade",
+                "Description": "NKS_SCREENSAVERPACKS_MARKSCREEN_SETTINGS_MAXGRADE_DESC",
+                "MinimumValue": 0,
+                "MaximumValue": 10000
             }
         ]
     }
