add - Added debug for locale check analyzer
---

For the locale check analyzer, you can get a list of detected
localizations during your build using LOCALECHECK_DEBUG. You'll get
harmless warning messages that state what localizations have been
detected.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -45,6 +45,7 @@
       Supported constants (NitrocidFlags):
           - VSDEBUG: Enables immediate window debug in the "Output" pane
           - NKS_EXTENSIONS: Forces extension support
+          - LOCALECHECK_DEBUG: Lists all localizations detected, along with other debug output
       
       Supported configurations (build arguments can be passed with -p:CONFIG=VALUE):
           - NKSLITE: If "true", don't build addons and extension support
