add - doc - Added ignore cert errors for HTTP tran...
...sfer

---

We've added a configuration to the main kernel config that allows you to
ignore certificate errors when making HTTP requests.

---

Type: add
Breaking: False
Doc Required: True
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Settings/SettingsEntries.json
+++ b/public/Nitrocid.Base/Resources/Settings/SettingsEntries.json
@@ -916,6 +916,12 @@
                 "Description": "NKS_SETTINGS_KERNEL_NETWORK_SHOWNOTIFICATIONUPLOAD_DESC"
             },
             {
+                "Name": "NKS_SETTINGS_KERNEL_NETWORK_IGNORECERTERRORS_NAME",
+                "Type": "SBoolean",
+                "Variable": "IgnoreCertificateErrors",
+                "Description": "NKS_SETTINGS_KERNEL_NETWORK_IGNORECERTERRORS_DESC"
+            },
+            {
                 "Name": "NKS_SETTINGS_KERNEL_NETWORK_REMOTEDEBUG_NAME",
                 "Type": "SMultivar",
                 "Description": "NKS_SETTINGS_KERNEL_NETWORK_REMOTEDEBUG_DESC",
