fix - reg - Fixed GetScreensaverNames function typ...
...e

---

We've fixed a regression where we'd set a localized screensaver as the
SelectionFunctionType. This has changed to ScreensaverManager.

---

Type: fix
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Base/Resources/Settings/SettingsEntries.json
+++ b/public/Nitrocid.Base/Resources/Settings/SettingsEntries.json
@@ -977,7 +977,7 @@
                 "Variable": "DefaultSaverName",
                 "IsEnumeration": false,
                 "SelectionFunctionName": "GetScreensaverNames",
-                "SelectionFunctionType": "NKS_SETTINGS_KERNEL_SCREENSAVER_SCREENSAVER_NAME",
+                "SelectionFunctionType": "ScreensaverManager",
                 "SelectionFallback": [ "matrixbleed" ],
                 "Description": "NKS_SETTINGS_KERNEL_SCREENSAVER_SCREENSAVER_DESC"
             },
