--- a/public/Nitrocid/Properties/launchSettings.json
+++ b/public/Nitrocid/Properties/launchSettings.json
@@ -33,7 +33,7 @@
     },
     "Nitrocid KS - Pre-boot in Spanish": {
       "commandName": "Project",
-      "commandLineArgs": "--lang spa --verbosepreboot"
+      "commandLineArgs": "--lang es-ES --verbosepreboot"
     },
     "Nitrocid KS - Enable pre-boot messages": {
       "commandName": "Project",
