upd - Updated to official Terminaux 8.1 release
---

Type: upd
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/private/Nitrocid.Tests/Nitrocid.Tests.csproj
+++ b/private/Nitrocid.Tests/Nitrocid.Tests.csproj
@@ -49,7 +49,7 @@
 
   <ItemGroup>
     <PackageReference Include="Shouldly" Version="4.3.0" />
-    <PackageReference Include="Terminaux" Version="8.1.0-20260113130243" />
+    <PackageReference Include="Terminaux" Version="8.1.0" />
   </ItemGroup>
 
   <ItemGroup>
