--- a/.github/workflows/build-rel.yml
+++ b/.github/workflows/build-rel.yml
@@ -25,8 +25,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '10.0.x'
-      - name: Add GitHub Package Registry to get access to beta builds
-        run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
+      # - name: Add GitHub Package Registry to get access to beta builds
+      #   run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
       - name: Solution Compilation (Windows)
         if: matrix.runs-on == 'windows-latest'
         run: ./tools/build.cmd Release -p:ContinuousIntegrationBuild=true
