--- a/.github/workflows/docgen.yml
+++ b/.github/workflows/docgen.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '10.0.x'
-      - name: Add GitHub Package Registry to get access to beta builds
-        run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
+      # - name: Add GitHub Package Registry to get access to beta builds
+      #   run: dotnet nuget add source --username AptiviCEO --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aptivi/index.json"
       - name: Setup DocFX
         run: dotnet tool install --global docfx
       - name: Generating Documentation
