int - Added command testing for NKS package
---

Type: int
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/.github/workflows/build-ppa-package-with-lintian.yml
+++ b/.github/workflows/build-ppa-package-with-lintian.yml
@@ -52,6 +52,8 @@ jobs:
           name: Nitrocid-KS-Debian-Package
           path: "*.deb"
 
-      - name: Try to install
+      - name: Try to install and execute
         run: |
           sudo apt install ./nitrocid-25_*.deb
+          ks-25 --version
+          ks-25 --apiversion
