int - Added command testing for NKS package
---

Type: int
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/.github/workflows/build-ppa-package-with-lintian.yml
+++ b/.github/workflows/build-ppa-package-with-lintian.yml
@@ -55,6 +55,8 @@ jobs:
           name: Nitrocid-KS-Debian-Package
           path: "*.deb"
 
-      - name: Try to install
+      - name: Try to install and execute
         run: |
           sudo apt install ./nitrocid-28_*.deb
+          ks-28 --version
+          ks-28 --apiversion
