bkp - Quotes are now offline!
---

As we don't want to continue using Quotable's API because of expired
certificate, we've managed to bring the quotes offline!

---

The following commits or tags are used for this backport:
  - 810523ccd9d21557243eff0b7eb0f7d91fc968b3

---

Type: bkp
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.Extras.Amusements/Nitrocid.Extras.Amusements.csproj
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Amusements/Nitrocid.Extras.Amusements.csproj
@@ -36,6 +36,11 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\*" />
+
+    <!-- TODO: Remove this embedded resource when Nettify gets an update that adds quotes. -->
+    <EmbeddedResource Include="../../../assets/quotes/data/quotes.json">
+      <LogicalName>Nitrocid.Extras.Amusements.Resources.quotes.json</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   
 </Project>
