upd - Updated general project dependencies
---

Type: upd
Breaking: No
Doc Required: No
Backport Required: No
AI Assisted: No
Part: 1/1

--- a/private/Nitrocid.Analyzers.Test/Nitrocid.Analyzers.Test.csproj
+++ b/private/Nitrocid.Analyzers.Test/Nitrocid.Analyzers.Test.csproj
@@ -12,13 +12,13 @@
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Analyzer.Testing" Version="[1.1.2]" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeFix.Testing" Version="[1.1.2]" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeRefactoring.Testing" Version="[1.1.2]" />
-    <PackageReference Include="NuGet.Frameworks" Version="7.0.1" />
-    <PackageReference Include="NuGet.Protocol" Version="7.0.1" />
-    <PackageReference Include="NuGet.Versioning" Version="7.0.1" />
-    <PackageReference Include="NuGet.Configuration" Version="7.0.1" />
-    <PackageReference Include="NuGet.Common" Version="7.0.1" />
-    <PackageReference Include="NuGet.Packaging" Version="7.0.1" />
-    <PackageReference Include="NuGet.Resolver" Version="7.0.1" />
+    <PackageReference Include="NuGet.Frameworks" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Protocol" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Versioning" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Configuration" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Common" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Packaging" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Resolver" Version="[7.0.1]" />
   </ItemGroup>
 
   <ItemGroup>
