--- a/private/Nitrocid.Analyzers.Test/Nitrocid.Analyzers.Test.csproj
+++ b/private/Nitrocid.Analyzers.Test/Nitrocid.Analyzers.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="MSTest.Sdk/4.0.2">
+﻿<Project Sdk="MSTest.Sdk/4.1.0">
 
   <PropertyGroup>
     <OutputPath>..\KSTest\</OutputPath>
@@ -13,13 +13,13 @@
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Analyzer.Testing" Version="[1.1.2]" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeFix.Testing" Version="[1.1.2]" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeRefactoring.Testing" Version="[1.1.2]" />
-    <PackageReference Include="NuGet.Frameworks" Version="7.0.1" />
-    <PackageReference Include="NuGet.Protocol" Version="7.0.1" />
-    <PackageReference Include="NuGet.Versioning" Version="7.0.1" />
-    <PackageReference Include="NuGet.Configuration" Version="7.0.1" />
-    <PackageReference Include="NuGet.Common" Version="7.0.1" />
-    <PackageReference Include="NuGet.Packaging" Version="7.0.1" />
-    <PackageReference Include="NuGet.Resolver" Version="7.0.1" />
+    <PackageReference Include="NuGet.Frameworks" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Protocol" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Versioning" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Configuration" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Common" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Packaging" Version="[7.0.1]" />
+    <PackageReference Include="NuGet.Resolver" Version="[7.0.1]" />
   </ItemGroup>
 
   <ItemGroup>
